--- a/src/Jili/ApiBundle/Resources/views/Exchange/finish.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Exchange/finish.html.twig
@@ -21,7 +21,7 @@
 <body>
 {% include 'JiliApiBundle::header.html.twig' %}
 <div class="webArticle exchange">
-  <h2><span><img src="{{ asset('images/exchangeMessage.gif')}}" alt="兑换信息"></span></h2>
+  <h2><span class="font18 corLightRed crumbTit">兑换信息</span></h2>
   <aside>
     {% include 'JiliApiBundle:User:rightInfo.html.twig' %}
   </aside>
