--- a/src/Jili/ApiBundle/Resources/views/User/adtaste.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/adtaste.html.twig
@@ -62,7 +62,7 @@ function addClass(type){
 <body>
 {% include 'JiliApiBundle::header.html.twig' %}
 <div class="webArticle history">
-  <h2><span><img src="{{ asset('images/taskHistory.gif')}}" alt="任务历史"></span></h2>
+  <h2><span class="font18 corLightRed crumbTit">任务历史</span></h2>
   <aside>
 {% include 'JiliApiBundle:User:rightInfo.html.twig' %}
   </aside>
