--- a/src/Jili/ApiBundle/Resources/views/User/exchange.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/exchange.html.twig
@@ -135,7 +135,7 @@ function look(eid){
 </div>
 
 <div class="webArticle history">
-  <h2><span><img src="{{ asset('images/exchangeHistory.gif')}}" alt="兑换历史"></span></h2>
+  <h2><span class="font18 corLightRed crumbTit">兑换历史</span></h2>
   <aside>
   {% include 'JiliApiBundle:User:rightInfo.html.twig' %}
   </aside>
