--- a/src/Jili/ApiBundle/Resources/views/User/message.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/message.html.twig
@@ -108,7 +108,7 @@ function addClass(type){
 {% include 'JiliApiBundle::header.html.twig' %}
 
 <div class="webArticle message">
-  <h2><span><img src="{{ asset('images/infoCenter.gif')}}" alt="消息中心"></span></h2>
+  <h2><span class="font18 corLightRed crumbTit">消息中心</span></h2>
   <aside>
 {% include 'JiliApiBundle:User:rightInfo.html.twig' %}
   </aside>
