--- a/src/Jili/ApiBundle/Resources/views/Exchange/indentityConfirm.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Exchange/indentityConfirm.html.twig
@@ -29,7 +29,7 @@ function change(){
 {% include 'JiliApiBundle::header.html.twig' %}
 <div class="webArticle exchange">
 <form action="{{ path('_exchange_identityCardComfirm',{'type': type}) }}" method="post" id="form1">
-  <h2><span><img src="{{ asset('images/exchangeMessage.gif')}}" alt="兑换信息"></span></h2>
+  <h2><span class="font18 corLightRed crumbTit">兑换信息</span></h2>
   <aside>
    {% include 'JiliApiBundle:User:rightInfo.html.twig' %}
   </aside>
