--- a/src/Jili/ApiBundle/Resources/views/Exchange/mobileInfo.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Exchange/mobileInfo.html.twig
@@ -79,7 +79,7 @@ function changePoint(){
 {% include 'JiliApiBundle::header.html.twig' %}
 <div class="webArticle exchange">
 <form action="{{ path('_exchange_mobileInfo') }}" method="post" id="form1">
-  <h2><span><img src="{{ asset('images/exchangeMessage.gif')}}" alt="兑换信息"></span></h2>
+  <h2><span class="font18 corLightRed crumbTit">兑换信息</span></h2>
   <aside>
    {% include 'JiliApiBundle:User:rightInfo.html.twig' %}
   </aside>
