--- a/src/Jili/ApiBundle/Resources/views/Admin/menu.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/menu.html.twig
@@ -671,7 +671,7 @@
         <TR height=22>
           <TD style="PADDING-LEFT: 30px" background={{ asset('images/admin/menu_bt.jpg')}}><A 
             class=menuParent onclick=expand(19) 
-            href="javascript:void(0);">手动积分管理</A></TD></TR>
+            href="javascript:void(0);">积分管理</A></TD></TR>
         <TR height=4>
           <TD></TD></TR></TABLE>
       <TABLE id=child19 style="DISPLAY: none" cellSpacing=0 cellPadding=0 
@@ -687,7 +687,7 @@
             src="{{ asset('images/admin/menu_icon.gif')}}" width=9></TD>
           <TD><A class=menuChild 
             href="{{ path('_admin_addPointSearch') }}" 
-            target=main>手动增加积分查询</A></TD></TR>
+            target=main>增加积分查询</A></TD></TR>
         <TR height=4>
           <TD colSpan=2></TD></TR></TABLE>
       </BODY></HTML>
