updated ajax type

--- a/src/Jili/ApiBundle/Resources/views/User/coupon.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/User/coupon.html.twig
@@ -82,7 +82,7 @@ $(document).ready(function(){
       {% if provinceId %}
       $.ajax({
             url: "{{ path('_user_getCity') }}?cid={{ provinceId }}",
-            post: "GET",
+            type: "POST",
             success:function(data){
               var obj = eval(data);
               for(var i=0;i<obj.length;i++){ 
@@ -100,7 +100,7 @@ $(document).ready(function(){
       {% if user.province %}
       $.ajax({
             url: "{{ path('_user_getCity') }}?cid={{ user.province }}",
-            post: "GET",
+            type: "POST",
             success:function(data){
               var obj = eval(data);
               for(var i=0;i<obj.length;i++){ 
@@ -135,7 +135,7 @@ function selectCity(){
   if($("#province").val()!=0){
      $.ajax({
               url: "{{ path('_user_getCity') }}?cid="+$('#province').val(),
-              post: "GET",
+              type: "POST",
               success:function(data){
                 var obj = eval(data);
                 for(var i=0;i<obj.length;i++){ 
