#348 added session cache on left task list

--- a/src/Jili/ApiBundle/Resources/views/Top/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Top/index.html.twig
@@ -1,5 +1,5 @@
 {% extends 'JiliEmarBundle::base140307.html.twig' %}
-{% block title %}{{ parent()  }} top页面{% endblock %}
+{% block title %}{{ parent()  }} {% endblock %}
 
 {% block stylesheet %}
 <link href="{{ asset('css140307/index.css') }} " rel="stylesheet" type="text/css">
