--- a/src/Jili/ApiBundle/Resources/views/Ads/cpro_baidu.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Ads/cpro_baidu.html.twig
@@ -1,4 +1,9 @@
+{# the ads is ignored excluding the prod environment #}
+{% if app.environment|trim|lower == 'prod' %}
   	<script type="text/javascript">
 	var cpro_id = "{{ cpro_id }}";
 	</script>
 	<script src="http://cpro.baidustatic.com/cpro/ui/c.js" type="text/javascript"></script>
+{% else %}
+<!-- The ads of cpro_id:{{ cpro_id }} is escaped  in {{ app.environment }} -->
+{% endif %}
