--- a/src/Jili/ApiBundle/Resources/views/Top/userInfo.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Top/userInfo.html.twig
@@ -1,11 +1,7 @@
 <div id="userInfo">
   <div class="basic clearfix">
       <div class="photo">
-      {% if app.session.has('icon_path') %}
-      <img src='{{ asset(app.session.has('icon_path') ) }}' height='90'/>
-      {% else %}
-      <img width="90" height="90" src="{{ asset('other140307/defaultFace.jpg') }}">
-      {% endif %}
+      <img src='{{ asset(app.session.get('icon_path','other140307/defaultFace.jpg' ) ) }}' height='90'/>
       </div>
     <p class="name">您好，{{ app.session.get('nick') }}</p>
     <p><a class="goUserInfo" href="{{ path('_user_info') }}">进入个人中心</a></p>
