--- a/src/Jili/ApiBundle/Resources/views/Top/task.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Top/task.html.twig
@@ -1,22 +1,28 @@
 <li class="first task"> <a class="taskBtn" href="#">我的任务列表</a><em>3</em>
   <ul>
-    {% if task.checkin == 1 %}
+
+    {% if task.checkin is defined and task.checkin == 1 %}
     <li class="signs"><a id="sign" onclick="signs();">每日签到<span>{{task.checkinPoint}}米粒</span></a></li>
     {% endif %}
-    {% if task.game == 1 %}
+
+    {% if task.game is defined and task.game == 1 %}
     <li><a href="{{ asset(path('_game_index'),'cdn1')  }}">小鸡找米<span>最高5888米粒</span></a></li>
     {% endif %}
-    {% if task.wen == 1 %}
+
+    {% if task.wen is defined and task.wen == 1 %}
     <li class="vote"><a target="_bank" href="http://www.91wenwen.net/vote/#active">91问问快速问答<span>1米粒</span></a></li>
     {% endif %}
-    {% if task.ad ==1 %}
+
+    {% if task.ad is defined and  task.ad ==1 %}
     <li><a href="{{ asset(path('_advertiserment_list'),'cdn1')  }}">广告任务墙<span>{{ adCheck }}更新</span></a></li>
     {% endif %}
     <li><a href="{{ asset(path('jili_emar_top_cps'),'cdn1') }}">去购物</a></li>
 
+    {% if task.cpa is defined %}
     {% for item in task.cpa %}
     <li><a href="{{ path('_advertiserment_index',{'id':item.id}) }}">{{ item.title[:8] }}<span>{{ item.incentive }}米粒</span></a></li>
     {% endfor %}
+    {% endif %}
   </ul>
 </li>
 
