updated adLogin post data

--- a/src/Jili/ApiBundle/Resources/views/Checkin/info.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Checkin/info.html.twig
@@ -134,7 +134,7 @@ function hasLogin(){
 }
 function sendLoginInfo(){
     $.ajax({  
-        url: "{{ path('_default_ad_login') }},
+        url: "{{ path('_default_ad_login') }}",
         data: { email: $("#email").val(), pwd: $("#pwd").val() }, 
         type: "POST",
         success:function(data){
