--- a/src/Jili/EmarBundle/Resources/views/Top/cps.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Top/cps.html.twig
@@ -44,11 +44,8 @@
   </div><!-- eof w300 -->
 
   <div class="w204 h340 fl" style=" margin-top:140px;">
-    <script type="text/javascript">
-	/*200*200，创建于2014-4-11*/
-	var cpro_id = "u1519095";
-	</script>
-	<script src="http://cpro.baidustatic.com/cpro/ui/c.js" type="text/javascript"></script>
+        <!-- 购物返利左侧一（200*200，纯文字） -->
+        {% include "JiliApiBundle:Ads:cpro_baidu.html.twig" with { cpro_id:"u1553017" } %}
   </div>
   
   <div class="main w930 fr">
