--- a/src/Jili/EmarBundle/Resources/views/Websites/detail.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Websites/detail.html.twig
@@ -57,16 +57,16 @@
 
   <div class="sidebar w300 fr">
   	<div>
+		{# 商城检索结果页右侧一（纯文字） #} 
 		<script type="text/javascript">
-        /*300*250，纯文字*/
-        var cpro_id = "u1522260";
+        var cpro_id = "u1554161";
         </script>
         <script src="http://cpro.baidustatic.com/cpro/ui/c.js" type="text/javascript"></script>
     </div>
 	<div class="marginT15">	
+		{# 商城检索结果页右侧二（图片） #} 
 		<script type="text/javascript">
-        /*300*250，纯图片*/
-        var cpro_id = "u1519420";
+        var cpro_id = "u1554166";
         </script>
         <script src="http://cpro.baidustatic.com/cpro/ui/c.js" type="text/javascript"></script>
     </div>
