--- a/src/Jili/EmarBundle/Resources/views/Websites/hot_on_cps.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Websites/hot_on_cps.html.twig
@@ -1,5 +1,5 @@
 
-    <div class="hotShop">
+    <div class="hotShop borderGlob">
     {% if websites|length > 0 %}
           <h3>热门商家<a href="{{ path('jili_emar_websites_shoplist') }}" class="more">更多&gt;&gt;</a></h3>
           <ul class="clearfix">
