--- a/src/Jili/EmarBundle/Resources/views/Product/search.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Product/search.html.twig
@@ -40,25 +40,18 @@
     </div>
 	<div class="fl">
 		<div>
+			{# 商品检索结果页左侧一（纯文字） #} 
 			<script type="text/javascript">
-            /*200*90，纯文字*/
-            var cpro_id = "u1522251";
-            </script>
-            <script src="http://cpro.baidustatic.com/cpro/ui/c.js" type="text/javascript"></script>
-        </div>
-		<div>
-			<script type="text/javascript">
-            /*200*90，纯文字*/
-            var cpro_id = "u1522251";
+            var cpro_id = "u1554170";
             </script>
             <script src="http://cpro.baidustatic.com/cpro/ui/c.js" type="text/javascript"></script>
         </div>
         <div class="marginT15">
-        	<script type="text/javascript">
-			/*200*200，纯图片*/
-			var cpro_id = "u1522038";
-			</script>
-			<script src="http://cpro.baidustatic.com/cpro/ui/c.js" type="text/javascript"></script>
+        	{# 商品检索结果页左侧二（图片） #} 
+			<script type="text/javascript">
+            var cpro_id = "u1554173";
+            </script>
+            <script src="http://cpro.baidustatic.com/cpro/ui/c.js" type="text/javascript"></script>
         </div>
 	</div>
     
