--- a/src/Jili/EmarBundle/Resources/views/Websites/shopList.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Websites/shopList.html.twig
@@ -40,18 +40,12 @@
 
   <div class="sidebar w300 fr">
   	<div>
-		<script type="text/javascript">
-        /*300*250，纯文字*/
-        var cpro_id = "u1522260";
-        </script>
-        <script src="http://cpro.baidustatic.com/cpro/ui/c.js" type="text/javascript"></script>
+        <!-- 商家列表右侧一（300*250，纯文字）-->
+        {% include "JiliApiBundle:Ads:cpro_baidu.html.twig" with { cpro_id:"u1553008" } %}
     </div>
     <div class="marginT15">	
-		<script type="text/javascript">
-        /*300*250，纯图片*/
-        var cpro_id = "u1519420";
-        </script>
-        <script src="http://cpro.baidustatic.com/cpro/ui/c.js" type="text/javascript"></script>
+        <!-- 商家列表右侧二（300*250，图片）-->
+        {% include "JiliApiBundle:Ads:cpro_baidu.html.twig" with { cpro_id:"u1553010" } %}
     </div>
   </div><!-- eof sidebar -->
 
