--- a/src/Jili/EmarBundle/Resources/views/Websites/shopSearch.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Websites/shopSearch.html.twig
@@ -44,18 +44,18 @@
 
   <div class="sidebar w300 fr">
   	<div>
+		{# 返利详情右侧一（纯文字） #} 
 		<script type="text/javascript">
-		/*300*250，纯文字*/
-		var cpro_id = "u1522260";
-		</script>
-		<script src="http://cpro.baidustatic.com/cpro/ui/c.js" type="text/javascript"></script>
+        var cpro_id = "u1554152";
+        </script>
+        <script src="http://cpro.baidustatic.com/cpro/ui/c.js" type="text/javascript"></script>
 	</div>
     <div class="marginT15">	
+		{# 返利详情右侧二（图片） #} 
 		<script type="text/javascript">
-		/*300*250，纯图片*/
-		var cpro_id = "u1519420";
-		</script>
-		<script src="http://cpro.baidustatic.com/cpro/ui/c.js" type="text/javascript"></script>
+        var cpro_id = "u1554155";
+        </script>
+        <script src="http://cpro.baidustatic.com/cpro/ui/c.js" type="text/javascript"></script>
     </div>
   </div><!-- eof sidebar -->
 
