--- a/web/css140307/index.css
+++ b/web/css140307/index.css
@@ -51,12 +51,11 @@
 #indexBanner a.shopping {
 	right: 0;
 	top: 0;
-	width: 168px;
+	width: 191px;
 	height: 214px;
 	background-position: -447px 0px;
 }
 #task {
-	margin-top: 15px;
 	position: relative;
 }
 #task h3 {
@@ -65,7 +64,6 @@
 	line-height: 35px;
 	padding-left: 25px;
 	margin-bottom: 10px;
-	color:#ff6b4f; 
 }
 #task .menu {
 	position: absolute;
@@ -93,13 +91,15 @@
 	position: absolute;
 	top: 0;
 	left: 0;
-	background-color:#FFF;
+	background-color:#ffefef;
 }
 #task .taskList {
-	background-color: #FFF;
+	background-color: #ffefef;
 	float: left;
 	width: 615px;
 	text-align: center;
+	border-top:1px solid #fbd1ca;
+	border-bottom:1px solid #fbd1ca;
 }
 #task .taskList li {
 	float: left;
@@ -108,8 +108,8 @@
 	line-height: 38px;
 	padding: 0 20px;
 	color: #666;
-	border-bottom: 1px dashed #e5e5e5;
-	border-right: 1px dashed #e5e5e5;
+	border-bottom: 1px dotted #ffc4ba;
+	border-right: 1px dotted #ffc4ba;
 }
 #task .taskList li a:hover,#task .taskList li dt:hover{ color:#FF3E17; text-decoration:underline;}
 #task .taskList li.brn {
@@ -133,14 +133,14 @@
 #task .taskList span.noTask{ display: inline-block; line-height: 40px;}
 .loginFrame, .userFrame {
 	background-color: #FFF;
-	padding: 20px 25px;
+	padding: 20px 21px;
 }
-#vote, #ranking, #banner, #news, #timeline, #indexRecommend{
+#vote, #ranking, #banner, #news, #timeline{
 	margin-top: 15px;
 }
-#indexRecommend .loading{left: 261px; top: 200px; position: absolute;z-index: 9999;}
+#indexRecommend .loading{left: 298px; top: 276px; position: absolute;z-index: 9999;}
 #indexRecommend .loading img{opacity:0.8;filter:alpha(opacity=80)}
-#vote h3, #ranking h3, #news h3, #timeline h3, #getMallList h3, #indexRecommend h3, #marketActivity h3 {
+#vote h3, #ranking h3, #news h3, #getMallList h3, #marketActivity h3 {
 	color: #ff6b4f;
 	font-weight: bold;
 	font-size: 15px;
@@ -189,11 +189,9 @@
 }
 #news {
 	position: relative;
-	background-color: #FFF;
-	padding: 15px;
 }
 #news .mask {
-	height: 90px;
+	height: 75px;
 	overflow: hidden;
 	position: relative;
 	width: 270px;
@@ -205,12 +203,12 @@
 #news ul {
 	display: inline-block;
 	float: left;
-	margin-top: 10px;
 	position: relative;
 	width: 270px;
+	padding-left:6px;
 }
 #news ul li {
-	line-height: 220%;
+	line-height: 205%;
 	list-style: disc outside none;
 	margin-left: 15px;
 	position: relative;
@@ -221,8 +219,8 @@
 }
 #news .pageNumber {
 	position: absolute;
-	right: 15px;
-	top: 15px;
+	right: 5px;
+	top: 2px;
 }
 #news .pageNumber span {
 	margin: 0 10px;
@@ -279,7 +277,7 @@
 	float: left;
 	margin-top: 5px;
 	position: relative;
-	width: 300px;
+	width: 278px;
 }
 #ranking ul li {
 	background-position: 15px 12px;
@@ -320,7 +318,6 @@
 	float: right;
 }
 #ranking ul li dt span {
-	color: #FF3E17;
 	margin: 0 3px;
 }
 #timeline {
@@ -352,11 +349,9 @@
 	overflow: hidden;
 }
 #timeline ul li span {
-	color: #65b1ee;
 	margin-right: 3px;
 }
 #timeline ul li em {
-	color: #ff754f;
 	margin: 0 3px;
 }
 #vote .voteMain {
@@ -392,6 +387,11 @@
 	-moz-border-radius: 3px; 
 	-webkit-border-radius: 3px; 
 	border-radius: 3px;
+	padding:12px 77px;
+	background:#4da4eb;
+}
+#userLogin a.reg:hover {
+	opacity: 0.8;
 }
 .logontxtbg {
 	height: 14px;
@@ -403,14 +403,6 @@
 	width: 128px;
 	background: #fff;
 	margin: -14px auto 10px;
-}
-#userLogin a.reg {
-	padding:12px 85px;
-	background:#4da4eb;
-	
-}
-#userLogin a.reg:hover {
-	opacity: 0.8;
 }
 #userLogin input.text, #userLogin input.password {
 	background-repeat: no-repeat;
@@ -454,26 +446,24 @@
 #userLogin a.forget {
 	color: #54B9E8;
 }
-#userInfo .point dt {
+#userInfo .point dt,#userInfo .point dd{
 	float: left;
-	width: 115px;
+	width: 100px;
 	border-right: 1px dotted #e5e5e5;
-	border-bottom: 1px dotted #e5e5e5;
-	line-height: 40px;
+	padding: 10px 0;
 }
-#userInfo .point dd {
-	float: left;
-	width: 115px;
-	border-right: 1px dotted #EEE;
-	color: #FF3E17;
-	font-size: 22px;
-	line-height: 40px;
+#userInfo .point dt {
+	border-bottom: 1px dotted #e5e5e5;
+	padding: 15px 0;
+	line-height: 28px;
 }
 #userInfo .point .right {
 	border-right: none;
 	padding-left: 14px;
 	width: 120px;
 }
+#userInfo .point dd a{ display:block;}
+#userInfo .point dd:hover{ background:#f6f6f6;}
 #userInfo .basic {
 	margin-bottom: 10px;
 }
@@ -516,10 +506,10 @@
 }
 #getMallList {
 	background-color: #FFF;
-	margin-top: 15px;
 	padding: 15px 0;
 	position: relative;
 }
+#getMallList ul{padding-left: 6px;}
 #getMallList h3 {
 	padding: 0 0 0 15px;
 }
@@ -544,42 +534,64 @@
 }
 #getMallList li {
 	float: left;
-	width: 123px;
+	width: 104px;
 	text-align: center;
 	border-top: 1px dotted #e5e5e5;
 	margin-top: 10px;
-	padding:14px 0 4px;
+	padding:14px 0 13px;
 	color: #666;
-    height: 67px;
+    height: 50px;
 }
 #getMallList li a {
 	color: #666
 }
-#getMallList li a p{ color:#999;}
-#getMallList li em {
-	color: #FF3E17;
-}
-#indexRecommend{ background-color: #FFFFFF; position:relative; padding: 10px 0 0 13px; margin-bottom:10px;}
-#indexRecommend ul li {	background-color: #FFFFFF; float: left; margin:0 12px 0 0; padding:0 0 13px; width: 188px; overflow: hidden; position:relative;}
-#indexRecommend ul li.mr0 {	margin-right: 0;}
-#indexRecommend ul li p { padding: 0 10px 0 0;}
-#indexRecommend ul li p.image {	padding: 0;	margin-bottom: 5px;}
-#indexRecommend ul li p.image a img{ width:200px; height:auto;}
-#indexRecommend ul li p.name{ height:20px; overflow:hidden; font-weight:bold;}
-#indexRecommend ul li p.price {	color: #FF3E17; line-height: 180%;}
-#indexRecommend ul li p.price .price1{font-size: 15px; font-weight: bold;}
-#indexRecommend ul li p.price .price2 {	font-size: 22px; margin:0 5px 0 0; font-weight:bold;}
-#indexRecommend ul li p.price .discount{ font-size: 12px;float: right; margin: 7px 0 0; text-align:right; line-height: 19px;} 
-#indexRecommend ul li p del { text-decoration: line-through; margin-right: 5px;}
-#indexRecommend .menu{ position:absolute; right:14px; top:10px;}
-#indexRecommend .menu a.more{background: url("../images140307/iconImage.png") no-repeat scroll 0 -897px; padding-left:20px;}
-#indexRecommend .menu a.more:hover{background: url("../images140307/iconImage.png") no-repeat scroll 0 -937px; color:#ff6b4f;}
-#indexRecommend ul li .model{background: #ff6b4f;width: 175px;height: 31px;color: #fff;text-align: center;position: absolute;left: 0;bottom: 0;opacity: .85;filter: alpha(opacity=85);display:none;padding:27px 21px 24px 12px;}
-#indexRecommend ul li .model strong{font-size: 16px; margin-left: 10px; vertical-align: 5px;}
+#getMallList li a p{ color:#bbb; margin-top:5px;}
+#indexRecommend{ position:relative; margin:7px 0 10px;}
+
+#indexRecommend .iRhWrap .menu{margin-left: 10px;display: inline;}
+#indexRecommend .iRhWrap .menu a.more{background: url("../images140307/iconImage.png") no-repeat scroll 0 -897px; padding-left:20px;}
+#indexRecommend .iRcWrap{ border-top:3px solid #ff6b4f; background:#fff; padding-bottom: 10px; padding-left: 5px;}
+#indexRecommend .iRcWrap ul li { background-color: #FFFFFF; float: left; padding:10px 5px 0px 4px; width: 200px; overflow: hidden; position:relative;}
+#indexRecommend .iRcWrap ul li.mr0 { margin-right: 0;}
+#indexRecommend .iRcWrap ul li p.image a img{ width:200px; height:auto;}
+#indexRecommend .iRcWrap ul li p.image a img:hover{opacity:.8;filter:alpha(opacity = 80);-moz-opacity:.8}
+#indexRecommend .iRcWrap ul li p.name{ height:30px; overflow:hidden; margin-left: 5px;}
+#indexRecommend .iRcWrap ul li p.price { color: #FF3E17; line-height: 180%; position:relative; margin-top:5px;}
+#indexRecommend .iRcWrap ul li p.price .price1{font-size: 15px; font-weight: bold;}
+#indexRecommend .iRcWrap ul li p.price .price2 { margin:0 5px 0 0; font-size: 20px;font-weight: 700;}
+#indexRecommend .iRcWrap ul li p.price .discount{ font-size: 12px;float: right; margin: 7px 0 0; text-align:right; line-height: 19px;} 
+#indexRecommend .iRcWrap ul li p del { text-decoration: line-through; color:#bbb; position:absolute; right:0;}
+#indexRecommend .iRcWrap ul li .model{background: #ff6b4f;width: 175px;height: 31px;color: #fff;text-align: center;position: absolute;left: 0;bottom: 0;opacity: .85;filter: alpha(opacity=85);display:none;padding:27px 21px 24px 12px;}
+#indexRecommend .iRcWrap ul li .model strong{font-size: 16px; margin-left: 10px; vertical-align: 5px;}
+#indexRecommend ul li .prds1-item{
+                position: relative;
+                z-index: 1;
+            }
+            #indexRecommend ul li p.itemBgMask{
+                background-color: rgb(0, 0, 0);
+                opacity: .4;
+                filter: alpha(opacity=40);
+                z-index: 100;
+            }
+            #indexRecommend ul li p.itemBgMask, #indexRecommend ul li p.name {
+                display: none;
+                color: #fff;
+                height: 30px;
+                width: 100%;
+                overflow: hidden;
+                line-height: 30px;
+                position: absolute;
+                bottom:0;
+            }
+            #indexRecommend ul li p.name {
+                z-index: 200;
+            }
+            #indexRecommend ul li p.name a{
+                color: #fff;
+            }
 #marketActivity ul {
-	padding: 10px;
-	background-color: #FFF;
 	position: relative;
+	margin-top: 7px;
 }
 #marketActivity .mask {
 	height: 200px;
@@ -595,7 +607,8 @@
 }
 #marketActivity ul li {
 	float: left;
-	width: 595px;
+	width: 638px;
+	position: relative;
 }
 #marketActivity ul li dt {
 	float: left;
@@ -604,8 +617,12 @@
 #marketActivity ul li dt a img{ width:470px; height:200px;}
 #marketActivity ul li dd {
 	float: right;
-	width: 105px;
-	height:180px;
+	width: 157px;
+	height:198px;
+	padding-left: 10px;
+	background: #fff;
+	border:1px solid #e2e2e2;
+	border-left:none;
 }
 #marketActivity ul li p {
 	margin: 5px 0;
