--- a/src/Jili/ApiBundle/Resources/views/Top/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Top/index.html.twig
@@ -53,7 +53,7 @@
     {% else %}
     {% endif %}
 
-    <div id="getMallList" class="borderGlob">
+    <div id="getMallList" class="borderGlob marginT15">
         {{ render(controller('JiliEmarBundle:Websites:hot' , { 'max': 12, 'tmpl': 'top' } ) ) }}{# 返利商城 #}
     </div><!-- eof getMallList -->
     
