--- a/web/css/exchange.css
+++ b/web/css/exchange.css
@@ -280,7 +280,7 @@
     background-image: url("../images/exchange_mobile_closed_btn.gif")!important;
 }
 .exchange .historyView{
-	background: url("../images/exchangeContent.jpg") no-repeat scroll 0 0 rgba(0, 0, 0, 0);
+	background: url("../images/exchangeContent.jpg") no-repeat scroll 0 0;
     font-size: 16px;
     margin: 0 auto;
     padding-bottom: 105px;
@@ -292,7 +292,7 @@
     line-height: 24px;
 }
 .exchangeWay {
-    background: url("../images/exchangeFuture.jpg") no-repeat scroll 0 0 rgba(0, 0, 0, 0);
+    background: url("../images/exchangeFuture.jpg") no-repeat scroll 0 0;
     margin: 0 auto;
     padding-bottom: 125px;
     width: 885px;
