--- a/src/Jili/ApiBundle/Resources/views/Checkin/info.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Checkin/info.html.twig
@@ -163,7 +163,7 @@ function sendLoginInfo(){
     </div>
 </div>
 <div id="loginFrame">
-<form action="{{ path('_homepage') }}" method="post" name="form1" id="form1">
+<form action="{{ path('_login') }}" method="post" name="form1" id="form1">
 	<h2>登录</h2>
 	<div class="loginForm">
         <li class="error"></li>
