--- a/web/css/default.css
+++ b/web/css/default.css
@@ -360,3 +360,13 @@ footer section a:hover{
 	z-index:10009;
 }
 .crumbTit{padding-bottom: 10px;height: 20px;display: inline-block; font-weight:normal;}
+
+.webArticle .errorMessage{
+    color: #FF0000;
+    padding-bottom: 50px
+}
+.webArticle .error{
+    font-size: 16px;
+    padding-top: 100px;
+    text-align: center;
+}
